--- a/assets/launcher/lang/sklmessages_es_AR.properties
+++ b/assets/launcher/lang/sklmessages_es_AR.properties
@@ -3,13 +3,13 @@ lang.code=es_AR
 
 general.issues=Reportar un error
 general.support=Apoyanos en Patreon
-general.discord=Unite a nuestro Discord
-general.notready=¡Esta funcion aun no esta lista!
-generic.disabled=Disabled
-generic.enabled=Enabled
+general.discord=Unete a nuestro Discord
+general.notready=¡Esta función aun no esta lista!
+generic.disabled=DesHabilitado
+generic.enabled=Habilitado
 generic.soon=Pronto
 generic.new=Nuevo
-generic.loading=cargando...
+generic.loading=Cargando...
 
 tab.news=Actualizaciones
 tab.log=Cambios en el Launcher
@@ -21,11 +21,11 @@ sidebar.label.logged=Vos accediste como
 sidebar.label.player=Jugador
 sidebar.button.switch=Cambiar de usuario
 sidebar.button.settings=Ajustes del launcher
-sidebar.button.manager=Installations Manager
-sidebar.menu.item.edit=Edit Installation
-sidebar.menu.item.duplicate=Duplicate Installation
-sidebar.menu.item.browse=Open Installation Directory
-sidebar.menu.item.delete=Delete Installation
+sidebar.button.manager=Administrador de Instalaciones
+sidebar.menu.item.edit=Editar Instalación
+sidebar.menu.item.duplicate=Duplicar Instalación
+sidebar.menu.item.browse=Abrir Directorio de Instalaciones
+sidebar.menu.item.delete=Borrar Instalación
 sidebar.game.button.play=Jugar
 sidebar.game.button.play.demo=Jugar (Demo)
 sidebar.game.button.play.offline=Jugar (Offline)
@@ -45,15 +45,15 @@ versions.type.stable=Estable
 versions.type.release=Lanzamiento
 versions.type.pending=Experimental
 versions.type.snapshot=Snapshot
-versions.type.historical=Antigüa
-versions.type.old_beta=Antigüa Beta
-versions.type.old_alpha=Antigüa Alpha
+versions.type.historical=Antigua
+versions.type.old_beta=Beta Antigua
+versions.type.old_alpha=Alpha Antigua
 versions.type.custom=Personalizada
-versions.type.removed=Eliminao
+versions.type.removed=Eliminado
 versions.version.latest=Reciente
-versions.version.latestalt=Ultima version
-versions.version.latest-release=Ultimo lanzamiento
-versions.version.latest-snapshot=Ultima Snapshot
+versions.version.latestalt=Ultima versión
+versions.version.latest-release=Último lanzamiento
+versions.version.latest-snapshot=Última Snapshot
 
 # Crash Screen
 crash.sorry=¡Oops! Parece que se nos crasheo el juego. Perdoname el accidente :(
@@ -63,9 +63,9 @@ crash.open=Abrir archivo del error
 crash.alert.title=Puta, Ya crasheo el juego
 crash.alert.text=Talvez esto tenga solucion. ¿Quieres ver si tiene arreglo?
 crash.alert.button.ignore=Ignorar
-crash.alert.button.open=Abrir pagina web
-crash.header.title=Game Crashed
-crash.footer.button.close=Close
+crash.alert.button.open=Abrir página web
+crash.header.title=El juego ha crasheado
+crash.footer.button.close=Cerrar
 crash.footer.button.view=Ver reporte
 crash.footer.button.link=Obtener link para reportar
 # Alerts
@@ -74,17 +74,17 @@ alert.button.cancel=Cancelar
 
 # About
 about.translation=Traducido por:
-about.translation.authors=RedinkPython (RedinkVR o redinkMC)
+about.translation.authors=RedinkPython (RedinkVR o redinkMC), Demiux
 
 # Login Screen
 login.button.type.microsoft=Acceder con Microsoft
 login.button.type.offline=Acceder como desconectado
 login.label.username=Usuario
-login.dropdown.name=Usuarios con Session activa
+login.dropdown.name=Usuarios con Sesión activa
 login.button.play=Jugar
-login.button.logout=Cerrar session
+login.button.logout=Cerrar sesión
 login.button.switch.offline=Cambiar a modo desconectado
-login.button.switch.online=Cambiar a modo en linea
+login.button.switch.online=Cambiar a modo en línea
 
 # Settings
 settings.header.general=General
@@ -97,18 +97,18 @@ settings.option.language.info=Necesitas reiniciar el launcher para que surga el 
 settings.option.accent.name=Color principal
 settings.option.theme.name=Temas
 settings.option.theme.light.name=Tema Claro
-settings.option.theme.dark.name=Oscuro
-settings.option.theme.black.name=Black Theme
+settings.option.theme.dark.name=Tema Oscuro
+settings.option.theme.black.name=Tema Negro
 settings.option.sorting.name=Clasificación de instalaciones
 settings.option.sorting.bylastplayed.name=Clasificación de instalaciones desde la ultima jugada
 settings.option.sorting.byname.name=Clasificación de instalaciones por nombre
 settings.option.sorting.custom.name=Clasificación personalizada 
 settings.option.default.name=Instalaciones predeterminadas
 settings.option.console.name=Consola del launcher
-settings.option.xmx.name=Allow Xmx Arguments
+settings.option.xmx.name=Permitir Argumentos Xmx
 settings.option.xmx.info=Utiliza esta opción si sabes lo que haces
 settings.option.performance.name=Modo Desempeño
-settings.option.performance.info=Esta opcion desactiva algunas animaciones
+settings.option.performance.info=Esta opción desactiva algunas animaciones
 settings.option.halloween.name=Modo Halloween
 settings.option.xmas.name=Modo Navidad
 settings.option.provider.name=Proveedor de Modpacks predeterminado
@@ -132,7 +132,7 @@ manager.editor.header.title=Editar Instalación
 manager.editor.footer.button.save=Guardar
 manager.editor.option.name.name=Nombre de Instalación
 manager.editor.option.name.placeholder=Instalación sin nombre
-manager.editor.option.version.name=Version
+manager.editor.option.version.name=Versión
 manager.editor.option.version.vanilla=Vanilla
 manager.editor.option.directory.name=Carpeta del juego
 manager.editor.option.directory.placeholder=<Carpeta por defecto>
@@ -141,30 +141,30 @@ manager.editor.option.directory.info.link=Haz click aqui
 
 manager.editor.button.more=Mas opciones
 manager.editor.option.resolution.name=Resolución
-manager.editor.option.resolution.height=altura
-manager.editor.option.resolution.width=anchura
-manager.editor.option.resolution.fullscreen=Pantalla ccompleta
-manager.editor.option.memory.name=Memoria maxima (RAM)
-manager.editor.option.memory.auto=AUTOMATICO
-manager.editor.option.memory.disabled.info=Esta opción está desactivada porque tienes "Allow Xmx Arguments" activado
+manager.editor.option.resolution.height=Altura
+manager.editor.option.resolution.width=Anchura
+manager.editor.option.resolution.fullscreen=Pantalla Completa
+manager.editor.option.memory.name=Memoria máxima (RAM)
+manager.editor.option.memory.auto=AUTOMÁTICO
+manager.editor.option.memory.disabled.info=Esta opción está desactivada porque tienes "Permitir Argumentos Xmx" activado
 manager.editor.option.compatibility.name=Modo de compatibilidad
 manager.editor.option.compatibility.enabled=Activado
 manager.editor.option.compatibility.info=Esta skin desactiva el sistema de skins, usar unicamente si lo necesitas
 manager.editor.option.visibility.name=Visibilidad del launcher
 manager.editor.option.visibility.hide=Esconder y reabrir al cerrar el juego
 manager.editor.option.visibility.close=Cerrar cuando inicie Minecraft
-manager.editor.option.visibility.keep=Mantener abierto y muestra la consola del juego
+manager.editor.option.visibility.keep=Mantener abierto y mostrar la consola del juego
 manager.editor.option.visibility.keep.info=Esta opcion no es la adecuada para PCs de bajos recursos
 manager.editor.option.jvmpath.name=Archivo JAVA
 manager.editor.option.jvmpath.placeholder=Usar JAVA por defecto
 manager.editor.option.jvmargs.name=Argumentos JVM
-manager.editor.option.jvmargs.info=Esta opcion ignora el argumento -Xmx, usa la opcion de 'Memoria maxima'
+manager.editor.option.jvmargs.info=Esta opcion ignora el argumento -Xmx, usa la opcion de 'Memoria máxima'
 manager.modpack.search=Buscar modpacks
-manager.modpack.search.unavailable=La busqueda no esta disponible
+manager.modpack.search.unavailable=La búsqueda no esta disponible
 manager.modpack.search.noresults=No se han encontrado resultados
-manager.modpack.header.info=Informacion del Modpack
-manager.modpack.header.back=Atras
-manager.modpack.info.install=Installar la ultima
+manager.modpack.header.info=Información del Modpack
+manager.modpack.header.back=Atrás
+manager.modpack.info.install=Instalar la última versión
 manager.modpack.info.by=por
 manager.modpack.details.releasedate=Fecha de lanzamiento
 manager.modpack.details.filename=Nombre del archivo
